force-app/main/default/objects/ItemDeReporteDeGastos__c/fields/Comercio__c.field-meta.xml
<CustomField>
    <fullName>Comercio__c</fullName>
    <label>Comercio</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>