force-app/main/default/objects/ItemDeReporteDeGastos__c/fields/EstadoReporteDeGasto__c.field-meta.xml
<CustomField>
    <fullName>EstadoReporteDeGasto__c</fullName>
    <formula>TEXT ( ReporteDeGastos__r.Estado__c )</formula>
    <label>Estado Reporte de Gasto</label>
    <type>Text</type>
</CustomField>