force-app/main/default/objects/ItemDeReporteDeGastos__c/fields/GastoCreadoEnQbo__c.field-meta.xml
<CustomField>
    <fullName>GastoCreadoEnQbo__c</fullName>
    <formula>NOT ( ISBLANK ( IdQbo__c ) )</formula>
    <label>Gasto creado en QBO</label>
    <type>Checkbox</type>
</CustomField>