force-app/main/default/objects/ItemDeReporteDeGastos__c/fields/IdQbo__c.field-meta.xml
<CustomField>
    <fullName>IdQbo__c</fullName>
    <description>Identificador unico en Quick Books. Usado para sincronizar intercambio de datos</description>
    <label>Id QBO</label>
    <length>12</length>
    <type>Text</type>
</CustomField>