force-app/main/default/objects/ItemDeReporteDeGastos__c/fields/Importe__c.field-meta.xml
<CustomField>
    <fullName>Importe__c</fullName>
    <label>Importe</label>
    <precision>14</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>