force-app/main/default/objects/ItemDeReporteDeGastos__c/fields/ImporteUsd__c.field-meta.xml
<CustomField>
    <fullName>ImporteUsd__c</fullName>
    <label>Importe USD</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>