force-app/main/default/objects/ItemDeReporteDeGastos__c/fields/ReembolsoProcesado__c.field-meta.xml
<CustomField>
    <fullName>ReembolsoProcesado__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marcar esta casilla al procesar el reembolso.</inlineHelpText>
    <label>Reembolso procesado</label>
    <type>Checkbox</type>
</CustomField>