force-app/main/default/objects/ItemDeReporteDeGastos__c/fields/ReporteDeGastos__c.field-meta.xml
<CustomField>
    <fullName>ReporteDeGastos__c</fullName>
    <label>Reporte de Gastos</label>
    <referenceTo>ReporteDeGastos__c</referenceTo>
    <relationshipLabel>Gastos</relationshipLabel>
    <relationshipName>ItemsDeReportesDeGastos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>