force-app/main/default/objects/ItemDeReporteDeGastos__c/fields/SolicitaReembolso__c.field-meta.xml
<CustomField>
    <fullName>SolicitaReembolso__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marcar esta casilla si solicita reembolso por haber pagado por otros medios distintos a la tarjeta corporativa.</inlineHelpText>
    <label>Solicita reembolso</label>
    <type>Checkbox</type>
</CustomField>