force-app/main/default/objects/ItemDeReporteDeGastos__c/fields/TasaDeCambio__c.field-meta.xml
<CustomField>
    <fullName>TasaDeCambio__c</fullName>
    <label>Tasa de cambio</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>