force-app/main/default/objects/ItemDeReporteDeGastos__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comida</fullName>
            </value>
            <value>
                <fullName>Taxi</fullName>
            </value>
            <value>
                <fullName>Transporte</fullName>
            </value>
            <value>
                <fullName>Alojamiento</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>